--- a/app/design/adminhtml/default/default/template/newsletter/template/edit.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/template/edit.phtml
@@ -47,130 +47,188 @@
         <input type="hidden" id="preview_id" name="id" value="" />
     </div>
 </form>
-<script type="text/javascript">
-//<![CDATA[
-    var templateForm = new varienForm('newsletter_template_edit_form');
-    var templatePreviewForm = new varienForm('newsletter_template_preview_form');
-    var templateControl = {
+<script>
+const templateForm = new varienForm('newsletter_template_edit_form');
+const templatePreviewForm = new varienForm('newsletter_template_preview_form');
 
-        unconvertedText: '',
-        typeChange: false,
-        templateName: false,
-        id: 'text',
+const templateControl = {
+    unconvertedText: '',
+    typeChange: false,
+    templateName: false,
+    id: 'text',
 
-        init: function () {
-            if ($('convert_button_back')) {
-                $('convert_button_back').hide();
-            }
-        },
-
-        stripTags: function () {
-            if(!window.confirm("<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Are you sure that you want to strip all tags?')) ?>")) {
-                return false;
-            }
-            if(this.isEditor()) {
-                this.getEditor().turnOff();
-                this.getEditor().getToggleButton().hide();
-            }
-            this.unconvertedText = $(this.id).value;
-            $('convert_button').hide();
-            $('convert_button_back').show();
-            $(this.id).value =  $(this.id).value.stripScripts().stripTags();
-            $('field_template_styles').hide();
-            this.typeChange = true;
-            return false;
-        },
-
-        unStripTags: function () {
-            $('convert_button').show();
-            $('convert_button_back').hide();
-            $(this.id).value =  this.unconvertedText;
-            if(this.isEditor()) {
-                this.getEditor().turnOn();
-                this.getEditor().getToggleButton().show();
-            }
-            this.typeChange = false;
-            $('field_template_styles').show();
-            return false;
-        },
-
-        save: function() {
-            if (this.typeChange) {
-                $('change_flag_element').value = '1';
-            }
-            if(this.isEditor()) {
-                tinymce.triggerSave();
-            }
-            templateForm.submit();
-            return false;
-        },
-
-        saveAs: function() {
-            if (this.typeChange) {
-                $('change_flag_element').value = '1';
-            }
-
-            if($F('code').blank() || $F('code')==templateControl.templateName) {
-               value = prompt('<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Please enter new template name')) ?>', templateControl.templateName + '<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__(' Copy')) ?>');
-               if(!value) {
-                   if(value !== null) {
-                       $('code').value = '';
-                       templateForm.submit();
-                   }
-                   return false;
-               } else {
-                   $('code').value = value;
-               }
-            }
-
-            $('save_as_flag').value = '1';
-
-            if(this.isEditor()) {
-                tinymce.triggerSave();
-            }
-            templateForm.submit();
-            return false;
-        },
-
-        preview: function() {
-            if (this.typeChange) {
-                $('preview_type').value = 1;
-            } else {
-                $('preview_type').value = 2;
-            }
-            if (this.isEditor() && tinymce.get(this.id)) {
-                tinymce.triggerSave();
-                $('preview_text').value = $(this.id).value;
-                tinymce.triggerSave();
-            } else {
-                $('preview_text').value = $(this.id).value;
-            }
-            if ($('template_styles') != undefined) {
-                $('preview_styles').value = $('template_styles').value;
-            }
-            if ($('id') != undefined) {
-                $('preview_id').value = $('id').value;
-            }
-            templatePreviewForm.submit();
-            return false;
-        },
-
-        deleteTemplate: function() {
-            if(window.confirm("<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Are you sure that you want to delete this template?')) ?>")) {
-                   window.location.href = '<?= $this->getDeleteUrl() ?>';
-            }
-        },
-
-        isEditor: function() {
-            return (typeof tinyMceEditors != 'undefined' && tinyMceEditors[this.id] != undefined)
-        },
-
-        getEditor: function() {
-            return tinyMceEditors[this.id];
+    init() {
+        const convertButtonBack = document.getElementById('convert_button_back');
+        if (convertButtonBack) {
+            convertButtonBack.style.display = 'none';
         }
-    };
+    },
 
-    templateControl.init();
-    templateControl.templateName = "<?= $this->getJsTemplateName() ?>";
-//]]>
+    stripTags() {
+        if (!window.confirm("<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Are you sure that you want to strip all tags?')) ?>")) {
+            return false;
+        }
+
+        if (this.isEditor()) {
+            const editor = this.getEditor();
+            if (editor) {
+                editor.turnOff();
+                const toggleButton = editor.getToggleButton();
+                if (toggleButton) {
+                    toggleButton.style.display = 'none';
+                }
+            }
+        }
+
+        const textElement = document.getElementById(this.id);
+        this.unconvertedText = textElement.value;
+
+        document.getElementById('convert_button').style.display = 'none';
+        document.getElementById('convert_button_back').style.display = '';
+
+        // Strip HTML tags and scripts
+        const tempDiv = document.createElement('div');
+        tempDiv.innerHTML = textElement.value;
+        textElement.value = tempDiv.textContent || tempDiv.innerText || '';
+
+        const fieldStyles = document.getElementById('field_template_styles');
+        if (fieldStyles) {
+            fieldStyles.style.display = 'none';
+        }
+
+        this.typeChange = true;
+        return false;
+    },
+
+    unStripTags() {
+        document.getElementById('convert_button').style.display = '';
+        document.getElementById('convert_button_back').style.display = 'none';
+        document.getElementById(this.id).value = this.unconvertedText;
+
+        if (this.isEditor()) {
+            const editor = this.getEditor();
+            if (editor) {
+                editor.turnOn();
+                const toggleButton = editor.getToggleButton();
+                if (toggleButton) {
+                    toggleButton.style.display = '';
+                }
+            }
+        }
+
+        this.typeChange = false;
+
+        const fieldStyles = document.getElementById('field_template_styles');
+        if (fieldStyles) {
+            fieldStyles.style.display = '';
+        }
+
+        return false;
+    },
+
+    save() {
+        if (this.typeChange) {
+            document.getElementById('change_flag_element').value = '1';
+        }
+
+        if (this.isEditor()) {
+            const editor = this.getEditor();
+            if (editor && editor.editor) {
+                editor.updateTextArea();
+            }
+        }
+
+        templateForm.submit();
+        return false;
+    },
+
+    saveAs() {
+        if (this.typeChange) {
+            document.getElementById('change_flag_element').value = '1';
+        }
+
+        const codeElement = document.getElementById('code');
+        const codeValue = codeElement.value.trim();
+
+        if (!codeValue || codeValue === this.templateName) {
+            const value = prompt(
+                '<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Please enter new template name')) ?>',
+                this.templateName + '<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__(' Copy')) ?>'
+            );
+
+            if (!value) {
+                if (value !== null) {
+                    codeElement.value = '';
+                    templateForm.submit();
+                }
+                return false;
+            } else {
+                codeElement.value = value;
+            }
+        }
+
+        document.getElementById('save_as_flag').value = '1';
+
+        if (this.isEditor()) {
+            const editor = this.getEditor();
+            if (editor && editor.editor) {
+                editor.updateTextArea();
+            }
+        }
+
+        templateForm.submit();
+        return false;
+    },
+
+    preview() {
+        const previewTypeElement = document.getElementById('preview_type');
+        if (this.typeChange) {
+            previewTypeElement.value = 1;
+        } else {
+            previewTypeElement.value = 2;
+        }
+
+        const textElement = document.getElementById(this.id);
+        const previewTextElement = document.getElementById('preview_text');
+
+        if (this.isEditor()) {
+            const editor = this.getEditor();
+            if (editor && editor.editor) {
+                editor.updateTextArea();
+            }
+        }
+
+        previewTextElement.value = textElement.value;
+
+        const templateStyles = document.getElementById('template_styles');
+        if (templateStyles) {
+            document.getElementById('preview_styles').value = templateStyles.value;
+        }
+
+        const idElement = document.getElementById('id');
+        if (idElement) {
+            document.getElementById('preview_id').value = idElement.value;
+        }
+
+        templatePreviewForm.submit();
+        return false;
+    },
+
+    deleteTemplate() {
+        if (window.confirm("<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Are you sure that you want to delete this template?')) ?>")) {
+            window.location.href = '<?= $this->getDeleteUrl() ?>';
+        }
+    },
+
+    isEditor() {
+        return window.quillEditors?.has?.(this.id);
+    },
+
+    getEditor() {
+        return window.quillEditors?.get(this.id);
+    }
+};
+
+templateControl.init();
+templateControl.templateName = "<?= $this->getJsTemplateName() ?>";
 </script>
